# turtlebot3_summer_project

./: README.md  image_ros_opencv.cpp  image_ros_opencv.py  teleop_to_goal.cpp  teleop_twist_example.cpp  teleop_usetime_linear.cpp  teleop_xy_to_goal.cpp  turtlebot_track_people.cpp  yolov3_deepsort.py
deepsort_ws/devel/: .catkin  setup.sh
deepsort_ws/devel/include/deep_sort_pytorch/: Bound.h
deepsort_ws/devel/lib/deep_sort_pytorch/: draw.py  turtlebot_track_people
deepsort_ws/devel/lib/pkgconfig/: deep_sort_pytorch.pc
deepsort_ws/devel/lib/python3/dist-packages/deep_sort_pytorch/msg/: _Bound.py  __init__.py
deepsort_ws/devel/share/common-lisp/ros/deep_sort_pytorch/msg/: Bound.lisp  _package.lisp  _package_Bound.lisp  deep_sort_pytorch-msg.asd
deepsort_ws/devel/share/deep_sort_pytorch/cmake/: deep_sort_pytorch-msg-extras.cmake  deep_sort_pytorch-msg-paths.cmake  deep_sort_pytorchConfig.cmake
deepsort_ws/devel/share/gennodejs/ros/deep_sort_pytorch/msg/: Bound.js  _index.js
deepsort_ws/devel/share/roseus/ros/deep_sort_pytorch/: manifest.l
deepsort_ws/devel/share/roseus/ros/deep_sort_pytorch/msg/: Bound.l
deepsort_ws/src/deep_sort_pytorch/: CMakeLists.txt  turtlebot_track_people.cpp  yolov3_deepsort.py
deepsort_ws/src/deep_sort_pytorch/utils/: draw.py
turtlebot3_motion/: CMakeLists.txt  package.xml
turtlebot3_motion/src/: turtlebot3_xy_goal_amcl.cpp
turtlebot3_teleop/: CMakeLists.txt  package.xml
turtlebot3_teleop/nodes/: turtlebot3_to_goal.cpp  turtlebot3_xy_goal.cpp
