<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_motion</name>
  <version>0.0.0</version>
  <description>The turtlebot3_motion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="baesua@todo.todo">baesua</maintainer>

  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
